--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "auto-text-size": "^0.2.3",
     "gsap": "^3.13.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
